[gd_scene load_steps=8 format=2]

[ext_resource path="res://choice/choice_dice.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://choice/choice.gd" type="Script" id=3]

[sub_resource type="Animation" id=3]
resource_name = "in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.554785, 1 ),
"update": 0,
"values": [ Vector2( 0, -500 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.554785, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Container:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.554785, 1 ),
"update": 0,
"values": [ Vector2( 0, -500 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Container:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.8025, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 500 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.8025, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Container:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.8025, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 500 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Container:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.8025, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.552941, 0.639216, 0.615686, 0.827451 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 2 )

[node name="Choice" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -0.000488281
rect_min_size = Vector2( 500, 350 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/in = SubResource( 3 )
anims/out = SubResource( 4 )

[node name="Container" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -500.0
margin_bottom = -500.0

[node name="CenterContainer2" type="CenterContainer" parent="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="Container/CenterContainer2"]
margin_left = 230.0
margin_top = 94.0
margin_right = 730.0
margin_bottom = 444.0
rect_min_size = Vector2( 500, 350 )
custom_styles/panel = SubResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Container/CenterContainer"]
margin_left = 321.0
margin_top = 116.0
margin_right = 639.0
margin_bottom = 422.0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Container/CenterContainer/VBoxContainer"]
margin_right = 318.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
text = "Choose"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="Container/CenterContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 318.0
margin_bottom = 306.0

[node name="GridContainer" type="GridContainer" parent="Container/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 5.0
margin_right = 313.0
margin_bottom = 204.0
columns = 3

[node name="ChoiceDice1" parent="Container/CenterContainer/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource( 1 )]

[node name="ChoiceDice2" parent="Container/CenterContainer/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 104.0
margin_right = 204.0
number = 2

[node name="ChoiceDice3" parent="Container/CenterContainer/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 208.0
margin_right = 308.0
number = 3

[node name="ChoiceDice4" parent="Container/CenterContainer/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource( 1 )]
margin_top = 104.0
margin_bottom = 204.0
number = 4

[node name="ChoiceDice5" parent="Container/CenterContainer/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 104.0
margin_top = 104.0
margin_right = 204.0
margin_bottom = 204.0
number = 5

[node name="ChoiceDice6" parent="Container/CenterContainer/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 208.0
margin_top = 104.0
margin_right = 308.0
margin_bottom = 204.0
number = 6

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Container/CenterContainer/VBoxContainer/CenterContainer/GridContainer/ChoiceDice1" to="." method="_on_ChoiceDice1_pressed"]
[connection signal="pressed" from="Container/CenterContainer/VBoxContainer/CenterContainer/GridContainer/ChoiceDice2" to="." method="_on_ChoiceDice2_pressed"]
[connection signal="pressed" from="Container/CenterContainer/VBoxContainer/CenterContainer/GridContainer/ChoiceDice3" to="." method="_on_ChoiceDice3_pressed"]
[connection signal="pressed" from="Container/CenterContainer/VBoxContainer/CenterContainer/GridContainer/ChoiceDice4" to="." method="_on_ChoiceDice4_pressed"]
[connection signal="pressed" from="Container/CenterContainer/VBoxContainer/CenterContainer/GridContainer/ChoiceDice5" to="." method="_on_ChoiceDice5_pressed"]
[connection signal="pressed" from="Container/CenterContainer/VBoxContainer/CenterContainer/GridContainer/ChoiceDice6" to="." method="_on_ChoiceDice6_pressed"]
